# ace-analysis

./: .gitignore  README.md  pyproject.toml  unittest.sh
01_resource_configuration_generation/: generate_configurations.py  generate_configurations.sh
02_in_silico_validation_study/: investigate_hit_rate_vs_candidate_hits.py  investigate_hit_rate_vs_candidate_hits.sh
03_speed_memory_benchmark_study/: run_speed_memory_benchmark_experiment.sh  run_speed_memory_benchmark_experiment_master.sh
examples/: run_example_deconvolution_experiment.py  run_example_experiment.py  run_example_experiment.sh  run_example_experiment_alanine_scanning.py  run_example_experiment_deconvolution.py  run_example_rwd_experiment_1.py  run_example_rwd_experiment_2.py  test.py
experiments/: visualize_experiment_results.R
figures/: plot_main_figure_1.R  plot_main_figure_3.R  plot_main_figure_3.Rmd  plot_main_figure_3.nb.html  plot_main_figure_4.R  plot_main_figure_4.Rmd  plot_main_figure_4.nb.html  plot_main_figure_5.R  plot_main_figure_5.Rmd  plot_main_figure_5.nb.html  plot_main_figure_6.R  plot_main_figure_6.Rmd  plot_main_figure_6.nb.html  plot_supplementary_figure_2.Rmd  plot_supplementary_figure_2.nb.html  plot_supplementary_figure_3.R  plot_supplementary_figure_ace_vs_strom.Rmd  plot_supplementary_figure_ace_vs_strom.nb.html  plot_supplementary_figure_deconvolutethis.Rmd  plot_supplementary_figure_deconvolutethis.nb.html  plot_supplementary_figure_peptide_spot_counts.Rmd  plot_supplementary_figure_real_vs_estimated_spot_counts.Rmd  plot_supplementary_figure_rojas_sars-cov2.Rmd  (+7 more)
(+256 files in other folders)
